<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movie_item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="#efffff"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="6dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/title"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/movie_poster"
            card_view:layout_constraintTop_toTopOf="@+id/movie_poster" />

        <TextView
            android:id="@+id/movie_desc"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/description"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="12sp"
            card_view:layout_constraintStart_toStartOf="@+id/movie_year"
            card_view:layout_constraintTop_toBottomOf="@+id/movie_year" />

        <TextView
            android:id="@+id/movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:textColor="@color/black"
            android:textSize="15sp"
            card_view:layout_constraintStart_toStartOf="@+id/movie_title"
            card_view:layout_constraintTop_toBottomOf="@+id/movie_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
