<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/detail_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="284dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:clickable="true"
        android:elevation="6dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="5dp"
        app:cardCornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <ImageView
            android:id="@+id/movie_background"
            android:layout_width="398dp"
            android:layout_height="248dp"
            android:contentDescription="@string/movie_background"
            android:src="@drawable/ic_play" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/year_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/year"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/title_detail"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/title_detail"
        app:layout_constraintTop_toBottomOf="@+id/title_detail" />

    <TextView
        android:id="@+id/title_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_marginTop="36dp"
        android:textColor="@color/black"
        android:hint="@string/title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_card" />

    <ProgressBar
        android:id="@+id/rating_bar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:progress="50"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintEnd_toEndOf="@+id/movie_genre"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/movie_genre"
        app:layout_constraintTop_toBottomOf="@+id/movie_genre" />

    <TextView
        android:id="@+id/desc_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_rating" />

    <TextView
        android:id="@+id/movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:hint="@string/imdb_rating"
        app:layout_constraintEnd_toEndOf="@+id/rating_bar"
        app:layout_constraintStart_toStartOf="@+id/rating_bar"
        app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

    <TextView
        android:id="@+id/movie_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/genre"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/year_detail"
        app:layout_constraintStart_toStartOf="@+id/year_detail"
        app:layout_constraintTop_toBottomOf="@+id/year_detail" />
</androidx.constraintlayout.widget.ConstraintLayout>